# mymodule

./: README.md  pyproject.toml
src/mymodule/: __init__.py  mymodule.py  utils.py
